# paap-thesis-2024-robotont-driver

./: .gitmodules  .travis.rosinstall  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.git-old/: COMMIT_EDITMSG  HEAD  config  index  packed-refs
.git-old/logs/: HEAD
.git-old/logs/refs/remotes/origin/: HEAD  ros2-foxy-devel
.git-old/objects/pack/: pack-02f359121914ef1145cfea40c1285ef25e47dab7.idx  pack-02f359121914ef1145cfea40c1285ef25e47dab7.pack
.git-old/refs/remotes/origin/: ros2-foxy-devel
config/: parameters.yaml  robotont_odom.rviz  robotont_params.yaml
include/robotont_driver/: driver.h  driver.hpp  driver_exception.hpp  hardware.h  hardware.hpp  odom.hpp  plugin_base.h  plugin_base.hpp  plugin_led_module.h  plugin_led_module.hpp  plugin_motors.h  plugin_motors.hpp  plugin_odom.h  plugin_odom.hpp  plugin_power_supply.h  plugin_range.h  plugin_range.hpp  range_sensor.h  robotont_driver.h  robotont_driver.hpp  robotont_hardware.h  sven_driver.hpp
include/serial_driver/: comm_serial.hpp  serial_port.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robotont_driver/lib/robotont_driver/: driver_node  fake_driver_node
install/robotont_driver/share/ament_index/resource_index/parent_prefix_path/: robotont_driver
install/robotont_driver/share/robotont_driver/: package.sh
launch/: driver_basic.launch  driver_basic.launch.save  driver_launch.py  fake_driver.launch  fake_driver_launch.py  fake_odom.launch
log/: latest_build
src/: README.md  comm_serial.cpp  driver.cpp  driver_node.cpp  fake_driver_node.cpp  fake_odom_publisher.cpp  hardware.cpp  odom.cpp  plugin_base.cpp  plugin_led_module.cpp  plugin_motors.cpp  plugin_odom.cpp  plugin_power_supply.cpp  plugin_range.cpp  range_sensor.cpp  robotont_driver.cpp  robotont_hardware.cpp  sensors.cpp  serial_driver.cpp  serial_port.cpp  sven_driver.cpp
