<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>robotont_driver</name>
  <version>0.1.0</version>
  <description>Hardware driver for the Robotont robot</description>
  <author email="veiko@robotont.eu">Veiko Vunder</author>
  <maintainer email="veiko@robotont.eu">Veiko Vunder</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>serial</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>serial</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

